<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/main_activity_logo"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:contentDescription="@string/main_logo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pocket_garden_logo" />

    <ImageButton
        android:id="@+id/sunday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/sunday_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunday_text"
        app:layout_constraintTop_toTopOf="@+id/sunday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/monday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/monday_text"
        app:layout_constraintEnd_toEndOf="@+id/sunday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monday_text"
        app:layout_constraintStart_toStartOf="@+id/sunday_button"
        app:layout_constraintTop_toTopOf="@+id/monday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/tuesday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/tuesday_text"
        app:layout_constraintEnd_toEndOf="@+id/monday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tuesday_text"
        app:layout_constraintStart_toStartOf="@+id/monday_button"
        app:layout_constraintTop_toTopOf="@+id/tuesday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/wednesday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/wednesday_text"
        app:layout_constraintEnd_toEndOf="@+id/tuesday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wednesday_text"
        app:layout_constraintStart_toStartOf="@+id/tuesday_button"
        app:layout_constraintTop_toTopOf="@+id/wednesday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/thursday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/thursday_text"
        app:layout_constraintEnd_toEndOf="@+id/wednesday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thursday_text"
        app:layout_constraintStart_toStartOf="@+id/wednesday_button"
        app:layout_constraintTop_toTopOf="@+id/thursday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/friday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        android:text="@string/water_button"
        app:layout_constraintBottom_toBottomOf="@+id/friday_text"
        app:layout_constraintEnd_toEndOf="@+id/thursday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friday_text"
        app:layout_constraintStart_toStartOf="@+id/thursday_button"
        app:layout_constraintTop_toTopOf="@+id/friday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <ImageButton
        android:id="@+id/saturday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/water_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/saturday_text"
        app:layout_constraintEnd_toEndOf="@+id/friday_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saturday_text"
        app:layout_constraintStart_toStartOf="@+id/friday_button"
        app:layout_constraintTop_toTopOf="@+id/saturday_text"
        app:srcCompat="@drawable/ic_droplet_icon" />

    <TextView
        android:id="@+id/sunday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/sunday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/monday_text"
        app:layout_constraintEnd_toStartOf="@+id/sunday_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_logo" />

    <TextView
        android:id="@+id/monday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/monday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tuesday_text"
        app:layout_constraintStart_toStartOf="@+id/sunday_text"
        app:layout_constraintTop_toBottomOf="@+id/sunday_text" />

    <TextView
        android:id="@+id/tuesday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/tuesday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/wednesday_text"
        app:layout_constraintStart_toStartOf="@+id/monday_text"
        app:layout_constraintTop_toBottomOf="@+id/monday_text" />

    <TextView
        android:id="@+id/wednesday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/wednesday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/thursday_text"
        app:layout_constraintStart_toStartOf="@+id/tuesday_text"
        app:layout_constraintTop_toBottomOf="@+id/tuesday_text" />

    <TextView
        android:id="@+id/thursday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/thursday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/friday_text"
        app:layout_constraintStart_toStartOf="@+id/wednesday_text"
        app:layout_constraintTop_toBottomOf="@+id/wednesday_text" />

    <TextView
        android:id="@+id/friday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/friday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/saturday_text"
        app:layout_constraintStart_toStartOf="@+id/thursday_text"
        app:layout_constraintTop_toBottomOf="@+id/thursday_text" />

    <TextView
        android:id="@+id/saturday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/saturday"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/friday_text"
        app:layout_constraintTop_toBottomOf="@+id/friday_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8012739" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp">

        <io.github.yavski.fabspeeddial.FabSpeedDial
            android:id="@+id/speed_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabGravity="bottom_end"
            app:fabMenu="@menu/menu_main"
            app:miniFabBackgroundTint="@android:color/white"
            app:miniFabDrawableTint="?attr/colorPrimaryDark"
            app:miniFabTitleTextColor="?attr/colorPrimaryDark">

        </io.github.yavski.fabspeeddial.FabSpeedDial>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>