<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPlantInfo">

    <TextView
        android:id="@+id/plant_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="Edit Plant Information"
        android:textColor="#5A5A5A"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_add_photo_alternate_24px" />

    <EditText
        android:id="@+id/scientificNameTextField"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/wildwordsroman"
        android:hint="@string/text_field_scientific_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="@+id/nameTextField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nameTextField"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField" />

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/wildwordsroman"
        android:hint="@string/text_field_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/scientificNameTextField"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoButton" />

    <TextView
        android:id="@+id/idealTempText"
        android:layout_width="258dp"
        android:layout_height="36dp"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/ideal_temp"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/maxTextField"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/wildwordsroman"
        android:hint="@string/text_field_max"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="@+id/minTextField"
        app:layout_constraintEnd_toEndOf="@+id/idealTempText"
        app:layout_constraintTop_toTopOf="@+id/minTextField" />

    <EditText
        android:id="@+id/minTextField"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/wildwordsroman"
        android:hint="@string/text_field_min"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/idealTempText"
        app:layout_constraintTop_toBottomOf="@+id/idealTempText" />

    <TextView
        android:id="@+id/WaterDaysText"
        android:layout_width="258dp"
        android:layout_height="36dp"
        android:fontFamily="@font/wildwordsroman"
        android:text="@string/water_days_title"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/waterDescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:inputType="number"
        android:text="Water every"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/waterDaysTextField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/WaterDaysText" />

    <EditText
        android:id="@+id/waterDaysTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/wildwordsroman"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="@+id/waterDescription1"
        app:layout_constraintEnd_toStartOf="@+id/waterDescription2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/waterDescription1"
        app:layout_constraintTop_toTopOf="@+id/waterDescription1" />

    <TextView
        android:id="@+id/waterDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="Days"
        app:layout_constraintBottom_toBottomOf="@+id/waterDaysTextField"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/waterDaysTextField"
        app:layout_constraintTop_toTopOf="@+id/waterDaysTextField" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24px" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save_24px" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_24px" />

    <TextView
        android:id="@+id/indoorOutdoorDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wildwordsroman"
        android:text="Indoor / Outdoor"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        app:layout_constraintVertical_bias="0.18" />

    <ImageButton
        android:id="@+id/indoorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/outdoorButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/indoorOutdoorDesc"
        app:srcCompat="@drawable/ic_house_24px" />

    <ImageButton
        android:id="@+id/outdoorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/indoorButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/indoorButton"
        app:layout_constraintTop_toBottomOf="@+id/indoorOutdoorDesc"
        app:srcCompat="@drawable/ic_wb_sunny_24px" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent=".32"
        app:layout_constraintTop_toBottomOf="@+id/scientificNameTextField" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent=".48"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".72" />

</androidx.constraintlayout.widget.ConstraintLayout>